--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,89 +1,89 @@
-image:
-  name: sonarsource/sonar-scanner-cli:11
-  entrypoint: [""]
+# image:
+#   name: sonarsource/sonar-scanner-cli:11
+#   entrypoint: [""]
 
-variables:
-  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
-  DIRECTORY: "${CI_PROJECT_DIR}"
-  GIT_DEPTH: "0"
-  URL: "https://xr8v928q-8000.inc1.devtunnels.ms/api/fix/code-review"
-  SONAR_OUTPUT_FILE: "sonar_issues.json"
+# variables:
+#   SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+#   DIRECTORY: "${CI_PROJECT_DIR}"
+#   GIT_DEPTH: "0"
+#   URL: "https://xr8v928q-8000.inc1.devtunnels.ms/api/fix/code-review"
+#   SONAR_OUTPUT_FILE: "sonar_issues.json"
 
-stages:
-  - build-sonar
-  - fetch-issues
+# stages:
+#   - build-sonar
+#   - fetch-issues
 
-build-sonar:
-  stage: build-sonar
-  cache:
-    policy: pull-push
-    key: "sonar-cache-$CI_COMMIT_REF_SLUG"
-    paths:
-      - "${SONAR_USER_HOME}/cache"
-      - sonar-scanner/
-  script:
-    - echo "Running SonarQube Analysis..."
-    - echo ${CI_PROJECT_DIR}
-    - |
-      sonar-scanner \
-        -Dsonar.host.url="${SONAR_HOST_URL}" \
-        -Dsonar.login="${SONAR_TOKEN}" \
-        -Dsonar.projectKey="${CI_PROJECT_NAME}" \
-        -Dsonar.sources="."
-    - echo "SonarQube Analysis Completed"
-  allow_failure: false
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-    - if: '$CI_COMMIT_BRANCH == "develop"'
-    - if: '$CI_COMMIT_BRANCH == "main"'
+# build-sonar:
+#   stage: build-sonar
+#   cache:
+#     policy: pull-push
+#     key: "sonar-cache-$CI_COMMIT_REF_SLUG"
+#     paths:
+#       - "${SONAR_USER_HOME}/cache"
+#       - sonar-scanner/
+#   script:
+#     - echo "Running SonarQube Analysis..."
+#     - echo ${CI_PROJECT_DIR}
+#     - |
+#       sonar-scanner \
+#         -Dsonar.host.url="${SONAR_HOST_URL}" \
+#         -Dsonar.login="${SONAR_TOKEN}" \
+#         -Dsonar.projectKey="${CI_PROJECT_NAME}" \
+#         -Dsonar.sources="."
+#     - echo "SonarQube Analysis Completed"
+#   allow_failure: false
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "push"'
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+#     - if: '$CI_COMMIT_BRANCH == "develop"'
+#     - if: '$CI_COMMIT_BRANCH == "main"'
 
-fetch-issues:
-  stage: fetch-issues
-  image: curlimages/curl:latest
-  script:
-    - echo "Fetching issues from SonarQube API..."
-    - |
-      curl -u "${SONAR_TOKEN}:" \
-        -X POST "${URL}" \
-        -H "Accept: application/json" \
-        -H "Content-Type: application/json" \
-        --data-raw "{\"componentKey\": \"${DIRECTORY}\"}" \
-        -o "${SONAR_OUTPUT_FILE}"
-    - echo "Issues saved to ${DIRECTORY} ${CI_PROJECT_NAME}"
-    - head -n 20 ${SONAR_OUTPUT_FILE}
-  artifacts:
-    paths:
-      - ${SONAR_OUTPUT_FILE}
-    expire_in: 1 week
-  dependencies:
-    - build-sonar
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "develop"'
-    - if: '$CI_COMMIT_BRANCH == "main"'
-# name: Build
+# fetch-issues:
+#   stage: fetch-issues
+#   image: curlimages/curl:latest
+#   script:
+#     - echo "Fetching issues from SonarQube API..."
+#     - |
+#       curl -u "${SONAR_TOKEN}:" \
+#         -X POST "${URL}" \
+#         -H "Accept: application/json" \
+#         -H "Content-Type: application/json" \
+#         --data-raw "{\"componentKey\": \"${DIRECTORY}\"}" \
+#         -o "${SONAR_OUTPUT_FILE}"
+#     - echo "Issues saved to ${DIRECTORY} ${CI_PROJECT_NAME}"
+#     - head -n 20 ${SONAR_OUTPUT_FILE}
+#   artifacts:
+#     paths:
+#       - ${SONAR_OUTPUT_FILE}
+#     expire_in: 1 week
+#   dependencies:
+#     - build-sonar
+#   rules:
+#     - if: '$CI_COMMIT_BRANCH == "develop"'
+#     - if: '$CI_COMMIT_BRANCH == "main"'
+name: Build
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build:
-#     name: Build and analyze
-#     runs-on: ubuntu-latest
+jobs:
+  build:
+    name: Build and analyze
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - uses: actions/checkout@v4
-#         with:
-#           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-#       - uses: SonarSource/sonarqube-scan-action@v6
-#         env:
-#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-#       # If you wish to fail your job when the Quality Gate is red, uncomment the
-#       # following lines. This would typically be used to fail a deployment.
-#       # - uses: SonarSource/sonarqube-quality-gate-action@v1
-#       #   timeout-minutes: 5
-#       #   env:
-#       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: SonarSource/sonarqube-scan-action@v6
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      # - uses: SonarSource/sonarqube-quality-gate-action@v1
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
